--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/bc-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/beyondchats/">
     <title>BeyondChats</title>
   </head>
   <body>
